--- a/computer-database/webservice/src/main/webapp/WEB-INF/web.xml
+++ b/computer-database/webservice/src/main/webapp/WEB-INF/web.xml
@@ -16,19 +16,12 @@ id="WebApp_ID" version="3.0">
 	</context-param>
 	
 	<servlet>
-		<servlet-name>jersey-servlet</servlet-name>
-		<servlet-class>
-			org.glassfish.jersey.servlet.ServletContainer
-		</servlet-class>
-		<init-param>
-			<param-name>jersey.config.server.provider.packages</param-name>
-			<param-value>com.excilys.computerdatabase.webservice</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
+		<servlet-name>webservice</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 	</servlet>
 	
 	<servlet-mapping>
-		<servlet-name>jersey-servlet</servlet-name>
+		<servlet-name>webservice</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
 </web-app>
