--- a/computer-database/persistence/pom.xml
+++ b/computer-database/persistence/pom.xml
@@ -19,6 +19,10 @@
 		
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 		</dependency>
 		<dependency>
