--- a/computer-database/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/computer-database/webapp/src/main/webapp/WEB-INF/web.xml
@@ -63,13 +63,18 @@ id="WebApp_ID" version="3.0">
 	</filter-mapping>
 	
 	<error-page>
-		<error-code>404</error-code>
-		<location>/WEB-INF/views/404.jsp</location>
+		<error-code>401</error-code>
+		<location>/WEB-INF/views/401.jsp</location>
 	</error-page>
 	
 	<error-page>
 		<error-code>403</error-code>
 		<location>/WEB-INF/views/403.jsp</location>
+	</error-page>
+	
+	<error-page>
+		<error-code>404</error-code>
+		<location>/WEB-INF/views/404.jsp</location>
 	</error-page>
 	
 	<error-page>
