--- a/computer-database/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/computer-database/webapp/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,10 @@ id="WebApp_ID" version="3.0">
 	</servlet-mapping>
 	<servlet-mapping>
 	    <servlet-name>default</servlet-name>
+	    <url-pattern>*.png</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+	    <servlet-name>default</servlet-name>
 	    <url-pattern>*.js</url-pattern>
 	</servlet-mapping>
 	<servlet-mapping>
